added resume download link.

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
 				<h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
-				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. </p>
-				</div>
+				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>
+				<strong><a href="/doc/resume.pdf" download>Download Resume</a></strong></p>
+			</div>
 				<hr class="separator">
 				<h3 class="text-center"><u>Skills</u></h3>
 				<div class="row skill-row">
@@ -139,7 +140,6 @@
 					<p class="skill-content">
 					<a href="http://nosconf.github.io/" target="_blank"><span class="skill-desc">Gave a presentation on benefits of Go in NOS Conf 2016,</span><a/>
 					<a href="https://github.com/GOOFS/go-goof-Talk" target="_blank"><span class="skill-desc">Built console based Chat Application called GoofTalk,</span></a>
-					<span class="skill-desc">Tried to contribute to open source applications written in Go i.e. Minio.io, GlusterFS</span>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
