update meta desc and keywords. added rel="noreferrer noopener"  as per lighthouse's suggestion.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#34353c" />
 	<meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
-	<meta name="description" itemprop="description" content="I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time."/>
-    <meta name="keywords" itemprop="keywords" content="webception, vishwas navada k, vishwasnavadak, personal portfolio, web designer, udupi, saligrama, Freelance developer, vishwas github webpage,"/>
-    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<meta name="description" itemprop="description" content="I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I take pictures in free time">
+  	<meta name="keywords" itemprop="keywords" content="vishwas navada k, vishwasnavadak, vishwas github page, vishwas.tech, personal portfolio, webception, web developer, udupi, saligrama"/>
+ 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="stylesheet" href="style.css" >
 	<link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
 	<link rel="stylesheet" href="assets/vendor/font-awesome/css/font-awesome.min.css">
@@ -32,10 +32,10 @@
 				<a class="nav-link" href="/blog/">I'm trying to write stuff</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" href="/blog/photos" target="_blank">I Take Photos</a>
+				<a class="nav-link" href="/blog/photos" target="_blank" rel="noreferrer noopener" >I Take Photos</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/blog/videos" target="_blank">Videos? Maybe.</a>
+				<a class="nav-link" href="/blog/videos" target="_blank" rel="noreferrer noopener" >Videos? Maybe.</a>
 			</li>
 		</ul>
 			</ul>
@@ -49,7 +49,7 @@
 				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
 				<h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
-				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I love to take pictures in free time. <br/>
+				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I take pictures in free time. <br/>
 				<strong><a href="/doc/resume.pdf" download>Download Resume</a></strong></p>
 			</div>
 				<hr class="separator">
@@ -61,9 +61,9 @@
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
-					<a href="http://webception.in" target="_blank"><span class="skill-desc">Customized HTML/CSS templates for WordPress and Blogger,</span></a>
+					<a href="http://webception.in" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Customized HTML/CSS templates for WordPress and Blogger,</span></a>
 					<span class="skill-desc">Developed Responsive UI for Web Applications with Twitter Bootstrap,</span><br/>
-					<a href="http://webception.in/a/projects" target="_blank"><span class="skill-desc">Designed and Developed websites for local businesses and college fests</span></a>
+					<a href="http://webception.in/a/projects" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Designed and Developed websites for local businesses and college fests</span></a>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
@@ -74,6 +74,7 @@
 					<p class="skill-content">
 					<span class="skill-desc">Wrote client side validations for HTML forms,</span>
 					<span class="skill-desc">Developed simple asynchronous applications using AJAX</span>
+					<a href="http:react-aws.vishwas.tech/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Built a tool that does sentiment analysis on Twitter Tweets using PHP open source libraries,</span></a>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
@@ -82,7 +83,7 @@
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
-						<a href="http://demo.webception.in/vishwas/twitter/" target="_blank"><span class="skill-desc">Worked with Google Charts API for showing the sentiment analysis results from Twitter.</span></a>
+						<a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Worked with Google Charts API for showing the sentiment analysis results from Twitter.</span></a>
 					<span class="skill-desc">Used Highcharts API within JasperSoft Reports to create interactive charts and dashboards.</span>
 					</p>
 					</div>
@@ -95,7 +96,7 @@
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Used PHP to handle server side processing and DB Operations,</span>
-					<a href="http://demo.webception.in/vishwas/twitter/" target="_blank"><span class="skill-desc">Built a tool that does sentiment analysis on Twitter Tweets using PHP open source libraries,</span></a>
+					<a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Built a tool that does sentiment analysis on Twitter Tweets using PHP open source libraries,</span></a>
 					<span class="skill-desc">Customized WordPress Theme and Plug-in Functionalities</span>
 					</p>	
 					</div>
@@ -106,8 +107,8 @@
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Active Contributor for Google Maps (Local Guides),</span>
-					<a href="http://webception.in" target="_blank"><span class="skill-desc">Helped Local Businesses by giving them a online presence using Google My Business,</span></a>
-					<a href="http://webception.in" target="_blank"><span class="skill-desc">Ran paid Google AdWords/Social Media Ad campaign to increase client sales and website conversions</span></a>
+					<a href="http://webception.in" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Helped Local Businesses by giving them a online presence using Google My Business,</span></a>
+					<a href="http://webception.in" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Ran paid Google AdWords/Social Media Ad campaign to increase client sales and website conversions</span></a>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
@@ -138,8 +139,8 @@
 						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
 						</div>
 					<p class="skill-content">
-					<a href="http://nosconf.github.io/" target="_blank"><span class="skill-desc">Gave a presentation on benefits of Go in NOS Conf 2016,</span><a/>
-					<a href="https://github.com/GOOFS/go-goof-Talk" target="_blank"><span class="skill-desc">Built console based Chat Application called GoofTalk,</span></a>
+					<a href="http://nosconf.github.io/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Gave a presentation on benefits of Go in NOS Conf 2016,</span><a/>
+					<a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Built console based Chat Application called GoofTalk,</span></a>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
@@ -185,13 +186,13 @@
 				<h3 class="text-center"><u>Random Projects</u></h3>
 				<div class="row skill-row">
 					<div class="col-sm-6 skill-col">
-						<h4><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" title="Github Repo">Goof Talk</a></h4>
+						<h4><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener"  title="Github Repo">Goof Talk</a></h4>
 						<p class="skill-content">
 							Terminal based chat application built using Go which enables communication between computers within the local network. 
 						</p>
 					</div>
 					<div class="col-sm-6 skill-col">
-						<h4><a href="http://demo.webception.in/vishwas/twitter/" target="_blank" title="Project Demo">Twitter Sentiment Analyzer</a></h4>
+						<h4><a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener"  title="Project Demo">Twitter Sentiment Analyzer</a></h4>
 						<p class="skill-content">
 							Web application that fetches top tweets from twitter based on the search query (hashtag/username) and categorizes them into positive, negative and neutral tweets.
 						</p>
@@ -206,9 +207,9 @@
 				<hr class="separator">
 				<div class="col-sm-12 ">
                     <h3>
-                        <a href="https://twitter.com/vishwasnavadak" target="_blank" title="Twitter" aria-label="Twitter Profile"><span class="fa fa-twitter-square fa-2x"></span></a>
-                        <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" title="LinkedIn" aria-label="Linkedin Profile"><span class="fa fa-linkedin-square fa-2x"></span></a>
-                        <a href="https://github.com/vishwasnavadak/" target="_blank" title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>
+                        <a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener"  title="Twitter" aria-label="Twitter Profile"><span class="fa fa-twitter-square fa-2x"></span></a>
+                        <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" rel="noreferrer noopener"  title="LinkedIn" aria-label="Linkedin Profile"><span class="fa fa-linkedin-square fa-2x"></span></a>
+                        <a href="https://github.com/vishwasnavadak/" target="_blank" rel="noreferrer noopener"  title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>
                         
                     </h3>
                 </div>
