--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<p class="skill-content">
 					<span class="skill-desc">Wrote client side validations for HTML forms,</span>
 					<span class="skill-desc">Developed simple asynchronous applications using AJAX</span>
-					<a href="http:react-aws.vishwas.tech/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Built a tool that does sentiment analysis on Twitter Tweets using PHP open source libraries,</span></a>
+					<a href="http://react-aws.vishwas.tech/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Experimenting with React and Redux</span></a>
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
