The Missing Comma(,)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						</div>
 					<p class="skill-content">
 					<span class="skill-desc">Wrote client side validations for HTML forms,</span>
-					<span class="skill-desc">Developed simple asynchronous applications using AJAX</span>
+					<span class="skill-desc">Developed simple asynchronous applications using AJAX,</span>
 					<a href="http://react-aws.vishwas.tech/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Experimenting with React and Redux</span></a>
 					</p>
 					</div>
