--- a/404.html
+++ b/404.html
@@ -47,10 +47,10 @@
           <a class="nav-link" href="/blog/">I'm trying to write stuff</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/photos" target="_blank">I Take Photos</a>
+          <a class="nav-link" href="/blog/photos" target="_blank">I Take Photos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/videos" target="_blank">Videos? Maybe.</a>
+          <a class="nav-link" href="/blog/videos" target="_blank">Videos? Maybe.</a>
         </li>
       </ul>
     </div>
