--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
 <br/><br/>
     <div class="container">
         <div class="row vertical-center-row" >
-            <div class="col-sm-12 text-center " ><br/><br/>
+            <div class="col-sm-12 text-center " ><br/>
 				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
-				<h1><strong> Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
+				<h1><strong> &gt; Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
                 <div class="row">
 				<p class="body-content">Hi, I am an IT Professional currently working in Infosys Ltd. I have my interest in Programming, Data Visualization and UI Development. I take pictures in free time. <br/>
 				<strong><a href="/doc/resume.pdf" download>Download Resume</a></strong></p>
 			</div>
 				<hr class="separator">
-				<h3 class="text-center"><u>Skills</u></h3>
+				<h3 class="text-center"><u>Technical Skills</u></h3>
+				<h6 class="text-center"><span id="detail-switch">Show Me Details</span></h6>
 				<div class="row skill-row">
 					<div class="col-sm-4 skill-col">
 					<h5>HTML/CSS</h5>
@@ -78,14 +79,15 @@
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
-					<h5>Data Visualization</h5>
-					<div class="progress skill-progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-					<p class="skill-content">
-						<a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Worked with Google Charts API for showing the sentiment analysis results from Twitter.</span></a>
-					<span class="skill-desc">Used Highcharts API within JasperSoft Reports to create interactive charts and dashboards.</span>
-					</p>
+							<h5>Databases(MYSQL,MSSQL)</h5>
+							<div class="progress skill-progress">
+								  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							<p class="skill-content">
+							<span class="skill-desc">Created Data Model for small web applications,</span>
+							<span class="skill-desc">Wrote SQL queries for fetching data from multiple tables to present it in Jasper Reports,</span>
+							<span class="skill-desc">Wrote simple Stored Procedures in SQL Server 2008</span>
+							</p>
 					</div>
 				</div>
 				<div class="row skill-row">
@@ -112,15 +114,14 @@
 					</p>
 					</div>
 					<div class="col-sm-4 skill-col">
-					<h5>SQL (MYSQL,MSSQL)</h5>
-					<div class="progress skill-progress">
-						  <div class="progress-bar skill-bar" role="progressbar" style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
-						</div>
-					<p class="skill-content">
-					<span class="skill-desc">Created Data Model for small web applications,</span>
-					<span class="skill-desc">Wrote SQL queries for fetching data from multiple tables to present it in Jasper Reports,</span>
-					<span class="skill-desc">Wrote simple Stored Procedures in SQL Server 2008</span>
-					</p>
+							<h5>Data Visualization</h5>
+							<div class="progress skill-progress">
+								  <div class="progress-bar skill-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+								</div>
+							<p class="skill-content">
+								<a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener" ><span class="skill-desc">Worked with Google Charts API for showing the sentiment analysis results from Twitter.</span></a>
+							<span class="skill-desc">Used Highcharts API within JasperSoft Reports to create interactive charts and dashboards.</span>
+							</p>
 					</div>
 				</div>
 				<div class="row skill-row">
@@ -156,7 +157,7 @@
 				<div class="row skill-row">
 					<div class="col-sm-6 skill-col">
 						<h5>Tools and Platforms</h5>
-						<p class="skill-content">
+						<p class="skill-content-extra">
 							<span class="skill-desc">Windows,</span>
 							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack,</span>
 							<span class="skill-desc">Git,</span>
@@ -173,7 +174,7 @@
 					</div>
 					<div class="col-sm-6 skill-col">
 						<h5>Other Skills and Interests</h5>
-						<p class="skill-content">
+						<p class="skill-content-extra">
 							<span class="skill-desc">Photography,</span>
 							<span class="skill-desc">Blogging,</span>
 							<span class="skill-desc">Watching Sci-Fi and Movies and TV Shows (Especially Marvel & DC Comic Book based),</span>
@@ -183,34 +184,39 @@
 					</div>
 				</div>
 				<hr class="separator">
-				<h3 class="text-center"><u>Random Projects</u></h3>
+				<h3 class="text-center"><u>Side Projects</u></h3>
 				<div class="row skill-row">
 					<div class="col-sm-6 skill-col">
 						<h4><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener"  title="Github Repo">Goof Talk</a></h4>
-						<p class="skill-content">
+						<p class="skill-content-extra">
 							Terminal based chat application built using Go which enables communication between computers within the local network. 
 						</p>
 					</div>
 					<div class="col-sm-6 skill-col">
 						<h4><a href="http://demo.webception.in/vishwas/twitter/" target="_blank" rel="noreferrer noopener"  title="Project Demo">Twitter Sentiment Analyzer</a></h4>
-						<p class="skill-content">
+						<p class="skill-content-extra">
 							Web application that fetches top tweets from twitter based on the search query (hashtag/username) and categorizes them into positive, negative and neutral tweets.
 						</p>
 					</div>
-					<div class="col-sm-12 skill-col">
+					<div class="col-sm-6 skill-col">
 						<h4 title="Sorry no link">Workshop and Conference Management System</h4>
-						<p class="skill-content">
-							A web portal connecting all the departments of the college and Accounts section in which staff enter the details of the workshop and conferences that they have conducted or attended and upload the relevant documents for efficient bookkeeping.
+						<p class="skill-content-extra">
+							A web portal connecting all the departments of the college and Accounts section in which staff enter the details of the workshop and conferences that they have conducted or attended and upload the relevant documents for efficient bookkeeping. Currently being used by NMAM Institute of Technology, Nitte.
 						</p>
 					</div>
+					<div class="col-sm-6 skill-col">
+							<h4> <a href="http://react-aws.vishwas.tech/todolist/" target="_blank" rel="noreferrer noopener"  title="Project Demo"> To-do List App </a></h4>
+							<p class="skill-content-extra">
+								To-do list web application built using React and Redux with the data is being fetched from/stored to DynamoDB via AWS Lambda API Gateway. 
+							</p>
+						</div>
 				</div>
 				<hr class="separator">
 				<div class="col-sm-12 ">
                     <h3>
                         <a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener"  title="Twitter" aria-label="Twitter Profile"><span class="fa fa-twitter-square fa-2x"></span></a>
                         <a href="http://linkedin.com/in/vishwasnavadak" target="_blank" rel="noreferrer noopener"  title="LinkedIn" aria-label="Linkedin Profile"><span class="fa fa-linkedin-square fa-2x"></span></a>
-                        <a href="https://github.com/vishwasnavadak/" target="_blank" rel="noreferrer noopener"  title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>
-                        
+                        <a href="https://github.com/vishwasnavadak/" target="_blank" rel="noreferrer noopener"  title="Github" aria-label="Github Profile"><span class="fa fa-github-square fa-2x"></span></a>   
                     </h3>
                 </div>
 
@@ -222,17 +228,16 @@
 		<p> &copy; 2018 Vishwas Navada K. Built with Bootstrap. Hosted on Github.</p>
 	</div>
 	<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-			ga('create', 'UA-51455888-6', 'auto');
-			ga('send', 'pageview');
-		
-			</script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	ga('create', 'UA-51455888-6', 'auto');
+	ga('send', 'pageview');
+	</script>
 	<script src="assets/vendor/jquery/jquery.min.js"></script>
 	<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+	<script src="scripts.js"></script>
 	<script src="assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js"></script>
 </body>
 </html>
