--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
 							<span class="skill-desc">Blogging,</span>
 							<span class="skill-desc">Watching Sci-Fi and Movies and TV Shows (Especially Marvel & DC Comic Book based),</span>
 							<span class="skill-desc">Traveling,</span>
+							<span class="skill-desc">Solving Rubic(3x3) and Mirror cube,</span>
 							<span class="skill-desc">Reading Tech Blogs</span>
 						</p>
 					</div>
