--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@
 							<span class="skill-desc">Windows,</span>
 							<span class="skill-desc">Linux distros like Ubuntu, Fedora and Backtrack,</span>
 							<span class="skill-desc">Git,</span>
+							<span class="skill-desc">Serverless Framework,</span>
+							<span class="skill-desc">AWS(Lambda, DynamoDB, API Gateway, S3),</span>
 							<span class="skill-desc">Slack,</span>
 							<span class="skill-desc">Trello,</span>
 							<span class="skill-desc">VS Code, </span>
