--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
     </div>
 	<br/>
 	<div class="footer text-center">
-		<p> &copy; 2018 Vishwas Navada K. Built with Bootstrap. Hosted on Github.</p>
+		<p> &copy; 2017-<script>document.write(new Date().getFullYear());</script> Vishwas Navada K. Built with Bootstrap. Hosted on Github.</p>
 	</div>
 	<script>
 	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
