updating meta tags

--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
 					pictures">
 		<meta name="keywords" itemprop="keywords"
-			content="vishwas navada k, vishwasnavadak, vishwas github page, vishwas.tech, personal portfolio, webception, web developer, udupi, saligrama" />
+			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, personal portfolio, webception, web developer" />
+		<!-- Open Graph Meta Tags -->
+		<meta name="og:title" content="Vishwas Navada K" />
+		<meta name="og:description" content="My portfolio page!" />
+		<meta name="og:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
+		<meta name="og:url" content="http://vishwas.tech/" />
+		<meta name="og:site_name" content="Vishwas Navada K" />
+		<meta name="og:type" content="website" />
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary" />
+		<meta name="twitter:site" content="@vishwasnavadak" />
+		<meta name="twitter:title" content="Vishwas Navada K" />
+		<meta name="twitter:description" content="My portfolio page!" />
+		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
+
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
