--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Vishwas Navada K</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="msapplication-TileColor" content="#da532c">
 		<meta name="theme-color" content="#1f2125" />
 		<meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
 		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
@@ -25,7 +26,11 @@
 		<meta name="twitter:description" content="My portfolio page!" />
 		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 
-		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/assets/icons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+		<link rel="manifest" href="/site.webmanifest">
+		<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#444444">
 		<link rel="stylesheet" href="style.css">
 		<link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="assets/vendor/font-awesome/css/font-awesome.min.css">
@@ -64,7 +69,8 @@
 		</nav>
 		<div class="body-container">
 			<section>
-				<img src="img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K" style="max-width:130px;">
+				<img src="/assets/img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K"
+					style="max-width:130px;">
 				<h1><strong> &gt; Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
 				<p class="intro-desc">Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
 					pictures.<br />
