--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>Vishwas Navada K</title>
+		<title>Vishwasa Navada K</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="msapplication-TileColor" content="#da532c">
@@ -11,9 +11,9 @@
 		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
 					pictures">
 		<meta name="keywords" itemprop="keywords"
-			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, personal portfolio, webception, web developer" />
+			content="vishwasa navada k, vishwasnavadak, vishwas github page,vishwasa blog, vishwas.tech, portfolio, webception, web developer" />
 		<!-- Open Graph Meta Tags -->
-		<meta name="og:title" content="Vishwas Navada K" />
+		<meta name="og:title" content="Vishwasa Navada K" />
 		<meta name="og:description" content="My portfolio page!" />
 		<meta name="og:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 		<meta name="og:url" content="http://vishwas.tech/" />
@@ -22,7 +22,7 @@
 		<!-- Twitter Card Meta Tags -->
 		<meta name="twitter:card" content="summary" />
 		<meta name="twitter:site" content="@vishwasnavadak" />
-		<meta name="twitter:title" content="Vishwas Navada K" />
+		<meta name="twitter:title" content="Vishwasa Navada K" />
 		<meta name="twitter:description" content="My portfolio page!" />
 		<meta name="twitter:image" content="https://vishwas.tech/img/vishwasnavadak.png" />
 
@@ -71,7 +71,7 @@
 			<section>
 				<img src="/assets/img/vishwasnavadak.png" class="img-rounded" alt="Vishwas Navada K"
 					style="max-width:130px;">
-				<h1><strong> &gt; Vishwas Navada K <span class="blinking-cursor">_</span></strong></h1>
+				<h1><strong> &gt; Vishwasa Navada K <span class="blinking-cursor">_</span></strong></h1>
 				<p class="intro-desc">Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
 					pictures.<br />
 					<strong><a href="/doc/resume.pdf" download>Download Resume</a></strong></p>
@@ -210,9 +210,8 @@
 						<p class="skill-content-extra">
 							<span class="skill-desc">Photography,</span>
 							<span class="skill-desc">Blogging,</span>
-							<span class="skill-desc">Watching Sci-Fi and Movies and TV Shows (Especially Marvel & DC
-								Comic Book
-								based),</span>
+							<span class="skill-desc">Watching Sci-Fi Movies and TV Shows (Especially Marvel & DC
+								Comic Book based),</span>
 							<span class="skill-desc">Traveling,</span>
 							<span class="skill-desc">Solving Rubic(3x3) and Mirror cube,</span>
 							<span class="skill-desc">Reading Tech Blogs</span>
@@ -279,7 +278,7 @@
 				</div>
 			</section>
 			<footer class="text-center">
-				<p> &copy; 2017-<span id="cur-year"></span> Vishwas Navada K. Built with Bootstrap. Hosted on
+				<p> &copy; 2017-<span id="cur-year"></span> Vishwasa Navada K. Built with Bootstrap. Hosted on
 					Github.</p>
 		</div>
 		</div>
