font size fixes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-		<link rel="manifest" href="/assets//site.webmanifest">
+		<link rel="manifest" href="/assets/site.webmanifest">
 		<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#444444">
 		<link rel="stylesheet" href="/assets/style.css">
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
@@ -43,13 +43,12 @@
 			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
 				data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
 				aria-label="Toggle navigation">
-				Menu
 				<i class="fa fa-bars"></i>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="http://vishwas.tech">Home</a>
+						<a class="nav-link" href="/">Home</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="/blog/">Blog</a>
@@ -68,9 +67,8 @@
 			<section class="landing-section">
 				<div class="landing-overlay">
 					<h1> &gt; Vishwasa Navada K <span class="blinking-cursor">_</span></h1>
-					<p>Hi, I do WebDev and DataViz. I occasionally write on my blog and take very
-						good pictures.<br />
-					</p>
+					<h2>Hi, I do WebDev and DataViz. I occasionally write on my blog and take very
+						good pictures.</h2>
 					<div class="social-icons">
 						<a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener"
 							title="Twitter" aria-label="Twitter Profile">
@@ -89,16 +87,15 @@
 			</section>
 
 			<section>
-				<h2>Technical Skills</h2>
-				<div class="row skill-row">
-					Lorem Ipsum
-				</div>
+				<h2>About</h2>
+				Lorem Ipsum
+
 				<div class="row skill-row">
 					<div class="col-sm-6 skill-col">
-
+						Blah
 					</div>
 					<div class="col-sm-6 skill-col">
-
+						Blah
 					</div>
 				</div>
 			</section>
