--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
 							<span class="fa fa-twitter fa-2x"></span>
 						</a>
 						<a href="http://linkedin.com/in/vishwasnavadak" target="_blank" rel="noreferrer noopener"
+							title="Reddit" aria-label="Reddit Profile">
+							<span class="fa fa-reddit-alien fa-2x"></span>
+						</a>
+						<a href="https://www.reddit.com/user/vishwasnavadak" target="_blank" rel="noreferrer noopener"
 							title="LinkedIn" aria-label="Linkedin Profile">
 							<span class="fa fa-linkedin fa-2x"></span>
 						</a>
@@ -82,8 +86,13 @@
 							title="Github" aria-label="Github Profile">
 							<span class="fa fa-github-alt fa-2x"></span>
 						</a>
+						<a href="https://stackoverflow.com/users/story/2526327" target="_blank"
+							rel="noreferrer noopener" title="Stackoverflow" aria-label="Stackoverflow Profile">
+							<span class="fa fa-stack-overflow fa-2x"></span>
+						</a>
 					</div>
 				</div>
+				<div class="more-button">More</div>
 			</section>
 
 			<section>
