--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<title>Vishwasa Navada K</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#1f2125" />
+		<meta name="msapplication-TileColor" content="#161616">
+		<meta name="theme-color" content="#161616" />
 		<meta name="google-site-verification" content="YHl3VakTk4zpdZb6zip6rHj28WurraIVQvQ02dnmnik" />
 		<meta name="description" itemprop="description" content="Hi, I do WebDev and DataViz. I occasionally write on my blog and take very good
 					pictures">
@@ -67,8 +67,7 @@
 			<section class="landing-section">
 				<div class="landing-overlay">
 					<h1> &gt; Vishwasa Navada K <span class="blinking-cursor">_</span></h1>
-					<h2>Hi, I do WebDev and DataViz. I occasionally write on my blog and take very
-						good pictures.</h2>
+					<h2>Geek. Ambivert. Wanderlust.</h2>
 					<div class="social-icons">
 						<a href="https://twitter.com/vishwasnavadak" target="_blank" rel="noreferrer noopener"
 							title="Twitter" aria-label="Twitter Profile">
@@ -96,42 +95,38 @@
 			</section>
 
 			<section>
-				<h2>About</h2>
-				Lorem Ipsum
-
-				<div class="row skill-row">
-					<div class="col-sm-6 skill-col">
-						Blah
-					</div>
-					<div class="col-sm-6 skill-col">
-						Blah
-					</div>
-				</div>
+				<h2>ABOUT</h2>
+				<p>I am Iron man</p>
+				<h3>Me, Besides Tech</h3>
+				<p>
+					Because I am batman
+				</p>
 			</section>
+
 			<section>
-				<h2 class="text-center">Side Projects</h2>
-				<div class="row skill-row">
-					<div class="col-sm-6 skill-col">
+				<h2>SIDE PROJECTS</h2>
+				<div class="row">
+					<div class="col-sm-6">
 						<h3><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener"
 								title="Github Repo">Goof Talk</a></h3>
-						<p class="skill-content-extra">
+						<p>
 							Terminal based chat application built using Go which enables communication between computers
 							within the
 							local network.
 						</p>
 					</div>
-					<div class="col-sm-6 skill-col">
+					<div class="col-sm-6">
 						<h3><a href="http://demo.webception.in/vishwas/twitter/" target="_blank"
 								rel="noreferrer noopener" title="Project Demo">Twitter Sentiment Analyzer</a></h3>
-						<p class="skill-content-extra">
+						<p>
 							Web application that fetches top tweets from twitter based on the search query
 							(hashtag/username) and
 							categorizes them into positive, negative and neutral tweets.
 						</p>
 					</div>
-					<div class="col-sm-6 skill-col">
+					<div class="col-sm-12">
 						<h3 title="Sorry no link">Workshop and Conference Management System</h3>
-						<p class="skill-content-extra">
+						<p>
 							A web portal connecting all the departments of the college and Accounts section in which
 							staff enter the
 							details of the workshop and conferences that they have conducted or attended and upload the
@@ -140,15 +135,7 @@
 							Nitte.
 						</p>
 					</div>
-					<div class="col-sm-6 skill-col">
-						<h3> <a href="http://react-aws.vishwas.tech/todolist/" target="_blank" rel="noreferrer noopener"
-								title="Project Demo"> To-do List App </a></h3>
-						<p class="skill-content-extra">
-							To-do list web application built using React and Redux with the data is being fetched
-							from/stored to
-							DynamoDB via AWS Lambda API Gateway.
-						</p>
-					</div>
+
 				</div>
 				<div class="col-sm-12 ">
 
