some more content.

--- a/index.html
+++ b/index.html
@@ -96,36 +96,48 @@
 
 			<section>
 				<h2>ABOUT</h2>
-				<p>I am Iron man</p>
+				<hr class="separator" />
+				<p>I am a developer currently working on Tableau and JavaScript. I love learning and experimenting with
+					new technologies. </p>
 				<h3>Me, Besides Tech</h3>
 				<p>
 					Because I am batman
 				</p>
+				<p>Want to talk? drop me a mail hi@vishwas.tech</p>
 			</section>
 
 			<section>
 				<h2>SIDE PROJECTS</h2>
+				<hr class="separator" />
 				<div class="row">
 					<div class="col-sm-6">
-						<h3><a href="https://github.com/GOOFS/go-goof-Talk" target="_blank" rel="noreferrer noopener"
-								title="Github Repo">Goof Talk</a></h3>
+						<h3>Goof Talk</h3>
 						<p>
-							Terminal based chat application built using Go which enables communication between computers
-							within the
-							local network.
+							Terminal based chat application built using Go which enables communication between
+							computers within the local network. <br />
+							<a class="btn" href="https://github.com/GOOFS/go-goof-Talk" target="_blank"
+								rel="noreferrer noopener" title="Github Repository">Github</a>
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<h3><a href="http://demo.webception.in/vishwas/twitter/" target="_blank"
-								rel="noreferrer noopener" title="Project Demo">Twitter Sentiment Analyzer</a></h3>
+						<h3>Twitter Sentiment Analyzer</a></h3>
 						<p>
 							Web application that fetches top tweets from twitter based on the search query
-							(hashtag/username) and
-							categorizes them into positive, negative and neutral tweets.
+							(hashtag/username) and categorizes them into positive, negative and neutral tweets.<br />
+							<a class="btn" href="https://github.com/vishwasnavadak/tweet-sentiment-analyzer"
+								target="_blank" rel="noreferrer noopener" title="Github Repository">Github</a>
 						</p>
 					</div>
-					<div class="col-sm-12">
-						<h3 title="Sorry no link">Workshop and Conference Management System</h3>
+					<div class="col-sm-6">
+						<h3>YouTube Infinite Search</a></h3>
+						<p>
+							YouTube Search App that keeps fetching search results until you get tired scrolling.<br />
+							<a class="btn" href="https://github.com/vishwasnavadak/youtube-search" target="_blank"
+								rel="noreferrer noopener" title="Github Repository">Github</a>
+						</p>
+					</div>
+					<div class="col-sm-6">
+						<h3>Workshop and Conference Management System</h3>
 						<p>
 							A web portal connecting all the departments of the college and Accounts section in which
 							staff enter the
