--- a/index.html
+++ b/index.html
@@ -97,17 +97,25 @@
 			<section>
 				<h2>ABOUT</h2>
 				<hr class="separator" />
-				<p>I am a developer currently working on Tableau and JavaScript. I love learning and experimenting with
-					new technologies. </p>
-				<h3>Me, Besides Tech</h3>
+				<p>I am a software developer currently working on JavaScript and Tableau. I like learning and
+					experimenting with new technologies as they come. I try to build things that save me from manual
+					efforts. I am an open-source enthusiast and a dark mode everything person.</p>
+				<br />
+				<h3>Tech I love to work with</h3>
+				<p>JavaScript (React, NodeJS), Python, Serverless, AWS. </p>
+				<br />
+				<h3>Besides Tech</h3>
 				<p>
-					Because I am batman
+					I am a cinephile with love towards Sci-Fi, Murder Mystery and Heist movies. I sometimes
+					pointlessly binge watch magic shows on YouTube. I love travelling and photography (Yes, the
+					background image you see above is a self-timed shot of me).
 				</p>
-				<p>Want to talk? drop me a mail hi@vishwas.tech</p>
+				<br />
+				<p>Want to talk? drop me a mail: hi@vishwas.tech</p>
 			</section>
 
 			<section>
-				<h2>SIDE PROJECTS</h2>
+				<h2>PROJECTS</h2>
 				<hr class="separator" />
 				<div class="row">
 					<div class="col-sm-6">
